--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,15 +1,18 @@
 identidock:
   build: .
-  expose:
-    - "9090"
+  ports:
+    - "9090:9090"
+    - "5000:5000"
   environment:
-    ENV: PROD
+    ENV: DEV
   links:
     - dnmonster
     - redis
 
 dnmonster:
   image: amouat/dnmonster:1.0
+  ports:
+    - "8080:8080"
 
 redis:
   image: redis:3.0
