--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,18 +1,15 @@
 identidock:
   build: .
-  ports:
-    - "9090:9090"
-    - "5000:5000"
+  # ports:
+  #   - "9090:9090"
   environment:
-    ENV: DEV
+    ENV: PRO
   links:
     - dnmonster
     - redis
 
 dnmonster:
   image: amouat/dnmonster:1.0
-  ports:
-    - "8080:8080"
 
 redis:
   image: redis:3.0
