--- a/prod.yml
+++ b/prod.yml
@@ -10,7 +10,7 @@ proxy:
     - NGINX_PROXY=http://identidock:9090
 
 identidock:
-  build: .
+  image: austin19/identidock:1.0
   environment:
     ENV: PROD
   volumes:
